* Added +/- selection indicators to menu CSS (Chris T)
* Added "dynatable.html" template that can be included in templates (Chris T)
* Dynatable forms obtained through GET now show link back to form (Chris T)
* LedgerSMB->error and Form->error now show db version and company (Chris T)
* Simpler use of Log::Log4perl instead of LedgerSMB::Log (Chris T)

Customer/Vendor Handling 
* Added sales tax id and license number fields for companies (Chris T)
* Simpified database schema (Chris T)

New CSV Import Module (Chris T)
* Imports GL transactions
* Imports AP batches
* Extensible
* field maps can be overridden

New Business Reporting Unit System (Chris T)
* Replaces Projects and Departments
* Business reporting units may be nested
* Allows one to do funds accounting, track jobs separately from projects, etc
* Report on any combination of business reporting units (up to one per class)

Changelog for 1.3 Series
Initial Release:  Monday, Oct 12 2011
Supported Presently

Changelog for 1.3.13
* Reduced log messages when upgrading/creating db, for some log levels (Chris T)
* Changed db setup not to use createdb for simple admin of pg_hba.conf (Chris T)
* Corrected type = 'password' not handled properly in elements.html (Chris T)
* Non-billable information now retained in db for timecards (Chris T)
* Corrected character encoding/corruption issue with backup scripts (Chris T)
* Changes in the single payment UI to minimize mouse movements (Erik H)
* Adding link to employee edit screen from user page (h/t H Sorli) (Chris T)
* Fixed: Can't designate managers (Chris T, bug  3486840)
* Can now skip adding the chart of accounts (Erik H)
* Fixed: can't reconcile accounts in foreign currency (bug 3498036)(Chris T)
* Fixed: Recon not setup for cash accounts in default COA (Erik H and Chris T)
* Corrected minor issue with demo sales quotation template (Chris T)

Chris T is Chris Travers
Erik H is Erik Huelsmann
H Sorli is Havard Sorli

Changelog for 1.3.12